# tradeloop

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE.md  FINANCIAL_DISCLAIMER.md  LICENSE  PRIVACY.md  README.en.md  README.md  V2_版本打磨完成进度书.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0127a57fdd13_v2_watchlist_tables.py  9d7c1a4b2e3f_cleanup_invalid_watchlist_stock_records.py  a1c2e3f4a5b6_market_sentiment_snapshot_table.py  a5b6c7d8e9f0_v5_trading_plan_and_user_config.py  ac271c65f3b7_v1_初始表结构.py  b2c3d4e5f6a7_top_list_unique_constraint.py  b6c7d8e9f0a1_v5_polish_defaults.py  c7d8e9f0a1b2_v6_trade_and_position.py  d8e9f0a1b2c3_v7_review_and_behavior_pattern.py  e1f2a3b4c5d6_v4_analysis_report_table.py  e9f0a1b2c3d4_v8_database_upgrade.py  f0a1b2c3d4e5_market_sentiment_raw_tables.py
backend/app/: config.py  constants.py  credentials.py  data_sync.py  database.py  errors.py  main.py  models.py  observability.py  screening.py
backend/app/api/: __init__.py  analysis.py  credentials.py  dashboard.py  data.py  envelope.py  kline.py  plan.py  position.py  review.py  screening.py  sentiment.py  stocks.py  strategies.py  system.py  trade.py  user_config.py  watchlist.py
backend/app/core/: __init__.py  events.py
backend/app/models/: __init__.py  analysis.py  financial.py  indicator.py  limit_event.py  market_sentiment.py  moneyflow.py  plan.py  quote.py  review.py  stock.py  strategy.py  theme_heat.py  top_list.py  trade.py  watchlist.py
backend/app/services/: backfill.py  data_sync.py  kline.py  llm.py  market.py  market_sentiment.py  pattern.py  plan.py  plan_contract.py  position.py  price_stats.py  review.py  review_contract.py  scheduler.py  screening.py  strategy.py  sync_indicator.py  sync_limit_event.py  sync_moneyflow.py  sync_theme_heat.py  sync_toplist.py  technical_indicators.py  trade.py  trade_contract.py  user_config.py  watchlist.py
backend/app/services/agents/: __init__.py  base.py  daily.py  plan.py  review.py  stock.py
backend/app/services/conditions/: __init__.py  (+9 more)
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_analysis_api.py  test_credentials.py  test_list_envelope_contract.py  test_market_sentiment_api.py  test_market_sentiment_migration.py  test_market_sentiment_models.py  test_market_sentiment_service.py  test_market_sentiment_sync.py  test_observability.py  test_openapi_contract.py  test_phase2_fixes.py  test_strategies_api.py  test_v1_fixes.py  test_v2_watchlist.py  test_v3_dashboard.py  test_v4_analysis.py  test_v5_plan.py  test_v5_plan_api.py  test_v6_position.py  test_v6_trade.py  test_v7_migration.py  test_v7_review.py  test_v7_review_api.py  test_v8_api.py  test_v8_indicator_sync.py  test_v8_indicators.py  test_v8_migration.py  test_v8_models.py  test_v8_sync.py  test_watchlist_api.py
(+116 files in other folders)
