[project]
name = "stock-assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "sqlalchemy>=2.0.49",
    "tushare>=1.4.29",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]   # 行宽不做硬性门禁（SQL / prompt 较长）
