[project]
name = "tradeloop-backend"
version = "8.0.0"
description = "TradeLoop（知行盘）— 本地化 A 股交易辅助系统后端：行情/选股/AI 分析/交易复盘"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "<your-name>" }]
license = { text = "MIT" }
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "sqlalchemy>=2.0.49",
    "tushare>=1.4.29",
    "uvicorn>=0.43.0",
]

[project.urls]
Homepage = "https://github.com/<your-username>/tradeloop"
Repository = "https://github.com/<your-username>/tradeloop"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]   # 行宽不做硬性门禁（SQL / prompt 较长）
