[project]
name = "tradeloop-backend"
version = "8.0.0"
description = "TradeLoop（知行盘）— 本地化 A 股交易辅助系统后端：行情/选股/AI 分析/交易复盘"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "benglezhenjun" }]
license = { text = "MIT" }
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "sqlalchemy>=2.0.51",
    "tushare>=1.4.29",
    "uvicorn>=0.43.0",
]

[project.urls]
Homepage = "https://github.com/benglezhenjun/tradeloop"
Repository = "https://github.com/benglezhenjun/tradeloop"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]   # 行宽不做硬性门禁（SQL / prompt 较长）

# ── 覆盖率 ──
# 门槛取真实值向下取整到 5 的倍数，留出迭代余量，随测试补强逐步棘轮上调：
# 补齐 strategies/watchlist/analysis API 层后实测 82.8% → 门槛 80%。
# 不写进 pytest addopts，避免本地跑单个测试文件时被 fail_under 误伤。
# CI 与覆盖率统计用：uv run python -m pytest tests/ -q --cov=app
[tool.coverage.run]
source = ["app"]
omit = [
    "*/__init__.py",
    "app/main.py",          # 应用装配/lifespan，单元测试不覆盖
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
